# MIC5_final_assignment

./: CMakeLists.txt
src/: main.c
src/matrix_driver_lib/: matrix_driver.c  matrix_driver.h
